--- a/client/src/app/profile/profile-data/profile-data.component.html
+++ b/client/src/app/profile/profile-data/profile-data.component.html
@@ -1,7 +1,7 @@
 <div class="upf-header">
   <div class="upf-user">
-    <img class="user-img" src="Screenshot_20240928-011835.png" alt="" (click)="fileInput.click()">
-    <h3>Le Male Elixir</h3>
+    <img class="user-img" src="user?.profilePicture ?? 'i will ad url here soon'" alt="" (click)="fileInput.click()">
+    <h3>{{ user?.username ?? 'Not Provided'}}</h3>
     <input #fileInput type="file" style="display:none" (change)="onFileSelected($event)">
   </div>
 </div>
