Render deploy issues

--- a/client/src/app/profile/profile-data/profile-data.component.html
+++ b/client/src/app/profile/profile-data/profile-data.component.html
@@ -5,3 +5,5 @@
     <input #fileInput type="file" style="display:none" (change)="onFileSelected($event)">
   </div>
 </div>
+
+<!-- Prpfile data -->
