forgot to pass prop

--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,6 +1,8 @@
 <main>
  <div class="user-profile">
-    <app-profile-data>
+    <app-profile-data
+    [user]="user"
+    >
         
     </app-profile-data>
     
