Search page header

--- a/client/src/app/search/search.component.html
+++ b/client/src/app/search/search.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="header">
-    <app-header></app-header>
+    <app-search-page-header>
+        
+    </app-search-page-header>
   </div>
 
   <div class="aside">
