polishing search page

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -40,7 +40,7 @@
 
 <div class="rs-sub-header">
   <div class="rs-sub-search">
-    <input type="search" placeholder="Search Products...">
+    <input [(ngModel)]="searchQ" type="search" placeholder="Search Products...">
     <i class="fa fa-search"></i>
   </div>
 </div>
