--- a/client/src/app/layout/search-page-header/search-page-header.component.html
+++ b/client/src/app/layout/search-page-header/search-page-header.component.html
@@ -4,16 +4,14 @@
       <h2>Jagarv</h2>
     </div>
     <div class="h-grow">
-      
       <div class="h-grow-search">
         <input [(ngModel)]="searchQ" type="text" placeholder="Search Something">
       </div>
-
     </div>
     <div class="h-user">
-      <div (click)="handleSearch()" class="h-search">
+      <a [routerLink]="['/search', searchQ]" class="h-search" role="button">
         <i class="fa fa-search"></i>
-      </div>
+      </a>
       <div class="h-cart">
         <i class="fa fa-shopping-cart"></i>
         <div class="h-cart-len">
