--- a/client/src/app/layout/search-page-header/search-page-header.component.css
+++ b/client/src/app/layout/search-page-header/search-page-header.component.css
@@ -46,26 +46,8 @@ header .h-user {
   color: #333;
 }
 
-header .h-cart {
-  position: relative;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-header .h-cart .h-cart-len {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  width: 24px;
-  height: 24px;
-  background-color: #dc3545;
-  border-radius: 50%;
-  color: white;
-  font-size: 0.8rem;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+header .h-user .h-filters {
+  display: none; 
 }
 
 header .not-logged-in i {
@@ -81,9 +63,12 @@ header .not-logged-in i:hover {
 
 
 @media (max-width: 768px) {
-  header .h-user .h-cart, 
   header .h-user .not-logged-in {
     display: none; 
+  }
+
+  header .h-user .h-filters {
+    display: block;
   }
 
   header .h-grow .h-grow-search {
