--- a/client/src/app/layout/search-page-header/search-page-header.component.html
+++ b/client/src/app/layout/search-page-header/search-page-header.component.html
@@ -13,7 +13,7 @@
         <i class="fa fa-search"></i>
       </a>
       <div (click)="showFilters()" class="h-filters">
-        <i class="fa fa-filters"></i>
+        <i class="fa fa-filter"></i>
       </div>
       <div>
         <div class="not-logged-in">
