--- a/client/src/app/search/search.component.css
+++ b/client/src/app/search/search.component.css
@@ -19,6 +19,32 @@
     border: 5px solid red;
 }
 
+
+@media(min-width: 601px) {
+    .aside {
+        position: static; 
+        display: block;
+    }
+}
+
+
+@media(max-width: 600px) {
+    .aside {
+        display: none; 
+        position: fixed; 
+        top: 0;
+        left: 0;
+        width: 80%;
+        height: 100%;
+        background-color: white; 
+        z-index: 1000;
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); 
+    }
+    .aside.show {
+        display: block;
+    }
+}
+
 .search-results {
     grid-area: searchResults;
     border: 7px solid blue;
@@ -27,10 +53,3 @@
 .footer {
     grid-area: footer;
 }
-
-@media(max-width: 600px) {
-    .aside {
-        display: none;
-    }
-}
-
