i always forgot something

--- a/client/src/app/layout/search-page-header/search-page-header.component.html
+++ b/client/src/app/layout/search-page-header/search-page-header.component.html
@@ -12,7 +12,7 @@
       <a [routerLink]="['/search', searchQ]" class="h-search" role="button">
         <i class="fa fa-search"></i>
       </a>
-      <div (click)="showFilters()" class="h-filters">
+      <div (click)="showFiltersAside()" class="h-filters">
         <i class="fa fa-filter"></i>
       </div>
       <div>
