--- a/client/src/app/admin/admin-products/admin-products.component.css
+++ b/client/src/app/admin/admin-products/admin-products.component.css
@@ -9,7 +9,7 @@ main table td {
   padding: 12px 15px;
   text-align: center;
   border-bottom: 1px solid #ddd;
-  word-wrap: break-word; 
+  word-wrap: break-word;
 }
 
 main table th {
@@ -24,15 +24,20 @@ main table td {
 }
 
 main table .description {
-  max-width: 150px; 
+  max-width: 300px;
+  white-space: normal;
+  overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 main table img {
   width: 30px;
   height: 30px;
   object-fit: cover;
-  border-radius: 5px; 
+  border-radius: 5px;
 }
 
 main table .p-actions {
