cascade delete config on server

--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -55,9 +55,7 @@
             
             <!-- Delete Product Button -->
             <app-delete-product-button
-            [productId]="product.id"
-            (productDeleted)="onProductDeleted($event)">
-            >
+            [productId]="product.id">
 
             </app-delete-product-button>
             
