Starting to implement Checkout System...

--- a/client/src/app/admin/admin-users/ban-user/ban-user.component.html
+++ b/client/src/app/admin/admin-users/ban-user/ban-user.component.html
@@ -1,3 +1,5 @@
- <button (click)="banOrUnban()" [ngClass]="{'banned': isBanned, 'unbanned': !isBanned}">
+<button (click)="banOrUnban()" 
+        class="actions-ban" 
+        [ngClass]="{'banned': isBanned, 'unbanned': !isBanned}">
     <i class="fa fa-ban"></i>
 </button>
