--- a/client/src/app/admin/admin-orders/admin-orders.component.html
+++ b/client/src/app/admin/admin-orders/admin-orders.component.html
@@ -6,24 +6,22 @@
     <table border="1" cellspacing="0" cellpadding="5">
         <thead>
             <tr>
-                <th>Image</th>
-                <th>Product</th>
                 <th>Order ID</th>
                 <th>Order Date</th>
                 <th>Username</th>
                 <th>User Email</th>
+                <th>User Adress</th>
                 <th>Status</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><img src="Screenshot_20240928-011835.png" alt="Producto" width="50" height="50"></td>
-                <td>Calcetines Unicornio</td>
                 <td>1239283826</td>
                 <td>17/10/2024</td>
                 <td>Juanito Pérez</td>
                 <td>juanito&#64;example.com</td>
+                <td>71 Calle De Las Reinas</td>
                 <td>Pending</td>
                 <td>
                   <button class="action-onWay">
