--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -6,6 +6,10 @@
         
     </app-profile-data>
     
+        <app-profile-adress>
+            
+        </app-profile-adress>
+    
       <div class="u-data">
         <div class="upfd-wishlist">
           <i class="fa fa-heart"></i>
