user adress func implemented

--- a/client/src/app/profile/profile.component.css
+++ b/client/src/app/profile/profile.component.css
@@ -16,3 +16,10 @@
   font-size: 25px;
   color: gray;
 }
+
+.user-adress {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
