--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -6,9 +6,11 @@
         
     </app-profile-data>
     
-        <app-profile-adress>
+    <div class="user-adress">
+      <app-profile-adress>
             
-        </app-profile-adress>
+      </app-profile-adress>
+    </div>
     
       <div class="u-data">
         <div class="upfd-wishlist">
