implementing admin dashboard, best sellers and orders page.

--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,1 +1,9 @@
-<p>admin-dashboard-chart works!</p>
+<div class="chart-wrapper"> 
+    <div class="chart">
+      
+    <div id="salesChart" style="width: 100%; height: 400px;">
+      
+    </div>
+      
+    </div>
+</div>
