--- a/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,14 +1,19 @@
 <main>
-    <!-- this will be componetized soon -->
     <div class="dashboard">
-     <div class="chart-wrapper"> 
-      <div class="chart">
-        
-      <div id="salesChart" style="width: 100%; height: 400px;">
-        
-      </div>
-        
-      </div>
-     </div>
+      <!-- INSIGHTS -->
+       <app-admin-dashboard-insights>
+
+       </app-admin-dashboard-insights>
+
+       <!-- CHART -->
+        <app-admin-dashboard-chart>
+
+        </app-admin-dashboard-chart>
+
+        <!-- TOP PURCHASED PRODUCTS -->
+
+        <app-admin-dashboard-top-products>
+          
+        </app-admin-dashboard-top-products>
     </div>
   </main>
