--- a/client/src/app/cart/cart-ticket/cart-ticket.component.html
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.html
@@ -7,8 +7,14 @@
       <p>{{ product.price | currency: 'USD' }}</p>
     </div>
   </div>
-
+ 
   <app-checkout-button>
       
   </app-checkout-button>
+
+  <app-paypal-button>
+    
+  </app-paypal-button>
+
 </div>
+ 
