--- a/client/src/app/cart/cart-ticket/cart-ticket.component.html
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.html
@@ -12,6 +12,10 @@
       
   </app-checkout-button>
 
+  <div class="p-or">
+    <p>OR</p>
+  </div>
+
   <app-paypal-button>
     
   </app-paypal-button>
