--- a/client/src/app/cart/cart-ticket/cart-ticket.component.css
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.css
@@ -30,3 +30,17 @@
     align-items: center;
     justify-content: center;
   }
+
+  .reduction-inp {
+    padding: 15px;
+    width: 100%;
+
+  }
+
+  .reduction-inp input {
+    width: 100%;
+    height: 35px;
+    border: .3px solid gray;
+    border-radius: 8px;
+    padding: 3px;
+  }
