--- a/client/src/app/cart/cart-ticket/cart-ticket.component.css
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.css
@@ -35,6 +35,10 @@
     padding: 15px;
     width: 100%;
 
+  }    
+  
+  .reduction-inp form {
+      width: 100%;
   }
 
   .reduction-inp input {
