--- a/client/src/app/cart/cart-ticket/cart-ticket.component.html
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="reduction-inp">
-    <form [formGroup]="reductionForm" (ngSubmit)="applyReduction()">
+    <form [formGroup]="reductionForm">
       <input 
         type="text" 
         formControlName="reductionCode" 
