--- a/client/src/app/admin/admin-orders/admin-orders.component.html
+++ b/client/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,42 +1,11 @@
-<main> 
-    
-    <div style="overflow-x: auto;">
-      
-      
-    <table border="1" cellspacing="0" cellpadding="5">
-        <thead>
-            <tr>
-                <th>Order ID</th>
-                <th>Order Date</th>
-                <th>Username</th>
-                <th>User Email</th>
-                <th>User Adress</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1239283826</td>
-                <td>17/10/2024</td>
-                <td>Juanito Pérez</td>
-                <td>juanito&#64;example.com</td>
-                <td>71 Calle De Las Reinas</td>
-                <td>Pending</td>
-                <td>
-                  <button class="action-onWay">
-                    <i class="fa fa-truck"></i>
-                  </button>
-                  <button class="action-arrived">
-                    <i class="fa fa-box-open"></i>
-                  </button>
-                </td>
-            </tr>
-           
-        </tbody>
-    </table>
-    
-    
-    </div>
-    
-    </main>
+<main>
+  <div class="orders">
+     <div *ngFor="order of orders">
+        <app-admin-order
+         [order]="order"
+        > 
+        </app-admin-order>
+     </div>
+  </div>
+ </main>
+ 
