--- a/client/src/app/admin/admin-orders/admin-orders.component.html
+++ b/client/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="orders">
-     <div *ngFor="order of orders">
+     <div *ngFor="let order of orders">
         <app-admin-order
          [order]="order"
         > 
