--- a/client/src/app/orders/orders.component.html
+++ b/client/src/app/orders/orders.component.html
@@ -1,5 +1,5 @@
 <main>
-    <div *ngFor="order in orders">
+    <div *ngFor="let order in orders">
       <app-order
       [order]="order">
       >
