--- a/client/src/app/admin/admin-orders/admin-order/admin-order.component.html
+++ b/client/src/app/admin/admin-orders/admin-order/admin-order.component.html
@@ -1,32 +1,31 @@
 <main>
-    <div class="order">
-      <div class="order-h">
-        <p class="o-id">Order N: {{ order?.id ?? 'NULL' }}</p>
-        <div class="order-details">
-          <div class="order-detail" *ngFor="let product of order?.products">
-            <p>Product ID: {{ product?.id ?? 'NULL' }}</p>
-            <p>Quantity: {{ product?.quantity }}</p>
-            <div class="order-detail-attribute" *ngFor="let option of product?.options">
-              <p>{{ option?.attributeName }}: {{ option?.value }}</p>
-            </div>
+  <div class="order">
+    <div class="order-h">
+      <p class="o-id">Order N: {{ order?.id ?? 'NULL' }}</p>
+      <div class="order-details">
+        <div class="order-detail" *ngFor="let product of order?.products">
+          <p>Product ID: {{ product.product?.id ?? 'NULL' }}</p>
+          <p>Quantity: {{ product.product?.quantity }}</p>
+          <div class="order-detail-attribute" *ngFor="let option of product.product?.options">
+            <p>{{ option?.attributeName }}: {{ option?.value }}</p>
           </div>
-        </div>
-      </div>
-      <div class="order-m">
-        <div class="order-imgs">
-          <div class="order-img" *ngFor="let product of order?.products">
-            <img *ngIf="product?.pictures?.length > 0" [src]="product?.pictures[0]">
-          </div>
-        </div>
-      </div>
-      <div class="order-f">
-        <div class="order-amount">
-          <p>$ {{ order?.amount }}</p>
-        </div>
-        <div class="order-status">
-          <p>{{ order?.status }}</p>
         </div>
       </div>
     </div>
-  </main>
-  
+    <div class="order-m">
+      <div class="order-imgs">
+        <div class="order-img" *ngFor="let product of order?.products">
+          <img *ngIf="product.product?.pictures?.length > 0" [src]="product.product?.pictures[0]">
+        </div>
+      </div>
+    </div>
+    <div class="order-f">
+      <div class="order-amount">
+        <p>$ {{ order?.amount }}</p>
+      </div>
+      <div class="order-status">
+        <p>{{ order?.status }}</p>
+      </div>
+    </div>
+  </div>
+</main>
