--- a/client/src/app/orders/order/order.component.html
+++ b/client/src/app/orders/order/order.component.html
@@ -1,30 +1,29 @@
-
-  <div class="order">
-    <div class="order-h">
-      <p class="o-id">Order N: {{ order?.id ?? 'NULL' }}</p>
-      <div class="order-details">
-        <div class="order-detail" *ngFor="let orderProduct of order?.products">
-          <p>Product ID: {{ orderProduct?.product?.id ?? 'NULL' }}</p>
-          <p>Quantity: {{ orderProduct?.quantity ?? 'NULL' }}</p>
-          <div class="order-detail-attribute" *ngFor="let option of orderProduct?.product?.options">
-            <p>{{ option?.attributeName }}: {{ option?.value }}</p>
-          </div>
+<div class="order">
+  <div class="order-h">
+    <p class="o-id">Order N: {{ order?.id ?? 'NULL' }}</p>
+    <div class="order-details">
+      <div class="order-detail" *ngFor="let orderProduct of order!.products!">
+        <p>Product ID: {{ orderProduct!.product!.id ?? 'NULL' }}</p>
+        <p>Quantity: {{ orderProduct!.quantity ?? 'NULL' }}</p>
+        <div class="order-detail-attribute" *ngFor="let option of orderProduct!.product!.options!">
+          <p>{{ option!.attributeName }}: {{ option!.value }}</p>
         </div>
-      </div>
-    </div>
-    <div class="order-m">
-      <div class="order-imgs">
-        <div class="order-img" *ngFor="let orderProduct of order?.products">
-          <img *ngIf="orderProduct?.product?.pictures?.length > 0" [src]="orderProduct?.product?.pictures[0]" />
-        </div>
-      </div>
-    </div>
-    <div class="order-f">
-      <div class="order-amount">
-        <p>$ {{ order?.amount ?? 'NULL' }}</p>
-      </div>
-      <div class="order-status">
-        <p>{{ order?.status ?? 'NULL' }}</p>
       </div>
     </div>
   </div>
+  <div class="order-m">
+    <div class="order-imgs">
+      <div class="order-img" *ngFor="let orderProduct of order!.products!">
+        <img *ngIf="orderProduct!.product!.pictures!.length > 0" [src]="orderProduct!.product!.pictures![0]" />
+      </div>
+    </div>
+  </div>
+  <div class="order-f">
+    <div class="order-amount">
+      <p>$ {{ order!.amount ?? 'NULL' }}</p>
+    </div>
+    <div class="order-status">
+      <p>{{ order!.status ?? 'NULL' }}</p>
+    </div>
+  </div>
+</div>
