--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,9 +1,7 @@
-<div class="chart-wrapper"> 
-    <div class="chart">
-      
+<div class="chart-wrapper">
+  <div class="chart">
     <div id="salesChart" style="width: 100%; height: 400px;">
-      
+      <ngx-echarts [options]="chartOptions"></ngx-echarts>
     </div>
-      
-    </div>
+  </div>
 </div>
