--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,9 +1,3 @@
 <div class="chart-wrapper">
-  <div class="chart">
-    <canvas id="salesChart" baseChart
-      [data]="chartData"
-      [options]="chartOptions"
-      [type]="'line'">
-    </canvas>
-  </div>
+     <div echarts [options]="chartOptions" class="chart"></div>
 </div>
