--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
@@ -8,6 +8,8 @@
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.2s ease;
+    width: 100%;
+    height: 100%;
   }
   
   .chart:hover {
