--- a/client/src/app/best-sellers/best-sellers.component.html
+++ b/client/src/app/best-sellers/best-sellers.component.html
@@ -1,1 +1,8 @@
-<p>best-sellers works!</p>
+<main>
+    <div>
+         <app-product-list
+          [products]="bestSellers"
+         >
+         </app-product-list>
+    </div>
+</main>
