--- a/client/src/app/best-sellers/best-sellers.component.html
+++ b/client/src/app/best-sellers/best-sellers.component.html
@@ -1,8 +1,10 @@
 <main>
     <div>
-         <app-product-list
+         <!-- <app-product-list
           [products]="bestSellers"
          >
-         </app-product-list>
+         </app-product-list> -->
+         
+         <h1>best sellers soon</h1>
     </div>
 </main>
