--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,3 +1,3 @@
 <div class="chart-wrapper">
-     <div echarts [options]="chartOptions" class="chart"></div>
+    <e-chart [options]="chartOptions" class="chart"></e-chart>
 </div>
