--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
@@ -1,17 +1,22 @@
 .chart-wrapper {
     padding: 25px;
-  }
-  
-  .chart {
-    padding: 25px;
+}
+
+.chart {
     border-radius: 15px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.2s ease;
     width: 100%;
-    height: 100%;
-  }
-  
-  .chart:hover {
+    height: 400px; 
+}
+
+.chart:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
+}
+
+e-chart {
+    display: block;
+    width: 100%;
+    height: 400px; 
+}
