--- a/client/src/app/admin/admin-dashboard/admin-dashboard-top-products/admin-dashboard-top-products.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-top-products/admin-dashboard-top-products.component.html
@@ -1,27 +1,26 @@
-<!-- i will fill this with real data soon -->
 <div class="top-products">
-    <h3>Most <i class="fa fa-fire"></i> Products</h3>
-       <div class="table-container">
-   <table class="top-products-table">
-    <thead>
-      <tr>
-        <th>Product</th>
-        <th>Orders</th>
-        <th>Stock</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="product-cell">
-          <img src="Screenshot_20240928-011835.png" alt="Producto" class="product-image">
-          <span class="product-title">Iphone 15 pro</span>
-        </td>
-        <td>123</td>
-        <td>15</td>
-        <td>$49.99</td>
-      </tr>  
-    </tbody>
-  </table>
+  <h3>Most <i class="fa fa-fire"></i> Products</h3>
+  <div class="table-container">
+    <table class="top-products-table">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Orders</th>
+          <th>Stock</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of dashboard?.mostOrderedProducts">
+          <td class="product-cell">
+            <img [src]="product[2]" alt="Producto" class="product-image">
+            <span class="product-title">{{ product[1] }}</span>
+          </td>
+          <td>{{ product[3] }}</td>
+          <td>{{ product[4] }}</td>
+          <td>${{ product[5] }}</td> 
+        </tr>
+      </tbody>
+    </table>
   </div>
-  </div>  
+</div>
