--- a/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,15 +1,17 @@
 <main>
   <div class="dashboard" *ngIf="dashboardData$ | async as dashboardData">
     <!-- INSIGHTS -->
-    <app-admin-dashboard-insights [dashboardData]="dashboardData">
-    </app-admin-dashboard-insights>
+    <ng-container *ngIf="dashboardData">
+      <app-admin-dashboard-insights [dashboard]="dashboardData">
+      </app-admin-dashboard-insights>
 
-    <!-- CHART -->
-    <app-admin-dashboard-chart [dashboardData]="dashboardData">
-    </app-admin-dashboard-chart>
+      <!-- CHART -->
+      <app-admin-dashboard-chart [dashboard]="dashboardData">
+      </app-admin-dashboard-chart>
 
-    <!-- TOP PURCHASED PRODUCTS -->
-    <app-admin-dashboard-top-products [dashboardData]="dashboardData">
-    </app-admin-dashboard-top-products>
+      <!-- TOP PURCHASED PRODUCTS -->
+      <app-admin-dashboard-top-products [dashboard]="dashboardData">
+      </app-admin-dashboard-top-products>
+    </ng-container>
   </div>
 </main>
