--- a/client/src/app/admin/admin-dashboard/admin-dashboard-insights/admin-dashboard-insights.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-insights/admin-dashboard-insights.component.html
@@ -43,8 +43,8 @@
     </div>
     <div class="insight">
                 <div class="ins-info">
-       <p>{{ dashboard?.totalIncome ?? 0 }}</p>
-       <p class="ins-income">$ 8913</p>
+       <p>Total Income</p>
+       <p class="ins-income">$ {{ dashboard?.totalIncome ?? 0  }}</p>
      </div>
      <div class="ins-icon">
        <div>
