--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,3 +1,10 @@
 <div class="chart-wrapper">
-    <e-chart [options]="chartOptions" class="chart"></e-chart>
+  <div class="chart">
+    <canvas
+      baseChart
+      [data]="chartData.datasets"
+      [labels]="chartData.labels"
+      [chartType]="chartType">
+    </canvas>
+  </div>
 </div>
