--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,10 +1,10 @@
 <div class="chart-wrapper">
   <div class="chart">
-     <canvas
-      baseChart
-      [data]="chartData.datasets"
-      [labels]="chartData.labels"
-      [chartType]="chartType">
-    </canvas> 
+    <ng-chart 
+    [type]="chartType"
+    [data]="chartData"
+    [options]="chartOptions">
+  </ng-chart>
+  
   </div>
 </div>
