--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.html
@@ -1,10 +1,7 @@
 <div class="chart-wrapper">
   <div class="chart">
-    <ng-chart 
-    [type]="chartType"
-    [data]="chartData"
-    [options]="chartOptions">
-  </ng-chart>
-  
+    <div class="chart-container">
+      <canvas #chartCanvas></canvas>
+    </div>
   </div>
 </div>
