--- a/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard-chart/admin-dashboard-chart.component.css
@@ -11,12 +11,19 @@
     height: 400px;
 }
 
-.chart:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-ng-chart {
-    display: block;
+.chart-container {
     width: 100%;
-    height: 400px;
-}
+    height: 400px;  
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  canvas {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px;
+    background-color: #fff;
+  }
+  
