--- a/client/src/app/admin/admin-orders/admin-order/admin-order.component.html
+++ b/client/src/app/admin/admin-orders/admin-order/admin-order.component.html
@@ -22,8 +22,29 @@
     <div class="order-amount">
       <p>$ {{ order!.amount ?? 'NULL' }}</p>
     </div>
-    <div class="order-status">
-      <p>{{ order!.status ?? 'NULL' }}</p>
+    <div class="order-status" [ngClass]="{
+        'preparing': order?.status === 'PREPARING',
+        'processing': order?.status === 'PROCESSING',
+        'arrived': order?.status === 'ARRIVED'
+    }">
+      <p *ngIf="order?.status === 'PREPARING'">
+        <i class="fas fa-cogs"></i> PREPARING
+      </p>
+      <p *ngIf="order?.status === 'PROCESSING'">
+        <i class="fas fa-plane"></i> IN TRANSIT
+      </p>
+      <p *ngIf="order?.status === 'ARRIVED'">
+        <i class="fas fa-check"></i> ARRIVED
+      </p>
     </div>
+  </div>
+
+  <div class="order-actions">
+    <button class="status-btn in-progress" *ngIf="order!.status === 'TRANSIT'">
+      <i class="fas fa-plane"></i> TRANSIT
+    </button>
+    <button class="status-btn arrived" *ngIf="order!.status === 'ARRIVED'">
+      <i class="fas fa-check"></i> ARRIVED
+    </button>
   </div>
 </div>
