--- a/client/src/app/orders/order/order.component.css
+++ b/client/src/app/orders/order/order.component.css
@@ -1,64 +1,77 @@
 .order {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
-    background: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    max-width: 600px; 
-    margin: 0 auto 20px auto; 
-  }
-  
-   .order .order-h .o-id {
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-   .order .order-h .o-date {
-    margin-bottom: 10px;
-    color: gray;
-  }
-  
-  
-   .order .order-img img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 8px;
-    border: 1px solid #e0e0e0;
-  }
-  
-   .order .order-imgs {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    margin-bottom: 15px;
-  }
-  
-   .order .order-f {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    border-top: 1px solid #ddd;
-  }
-  
-   .order .order-amount p {
-    font-size: 20px;
-    font-weight: bold;
-    color: #27ae60;
-  }
-  
-  
-   .order .order-status p {
-    font-size: 16px;
-    font-weight: bold;
-    color: #f39c12;
-    text-transform: uppercase;
-    background: rgba(243, 156, 18, 0.1);
-    padding: 5px 10px;
-    border-radius: 5px;
-  }
-  
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  background: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  max-width: 600px;
+  margin: 0 auto 20px auto;
+}
+
+.order .order-h .o-id {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.order .order-h .o-date {
+  margin-bottom: 10px;
+  color: gray;
+}
+
+.order .order-img img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 8px;
+  border: 1px solid #e0e0e0;
+}
+
+.order .order-imgs {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
+}
+
+.order .order-f {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.order .order-amount p {
+  font-size: 20px;
+  font-weight: bold;
+  color: #27ae60;
+}
+
+.order .order-status {
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  background: rgba(243, 156, 18, 0.1); 
+}
+
+.order .order-status.preparing {
+  background-color: #f39c12;  
+}
+
+.order .order-status.processing {
+  background-color: #BFBFBF; 
+}
+
+.order .order-status.arrived {
+  background-color: #27ae60;  
+}
+
+.order .order-status i {
+  margin-right: 8px;
+}
